# dynamicfusion

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Report.md  build.sh
apps/: CMakeLists.txt  demo.cpp  dynamicfusion_kinect.cpp
cmake/: Targets.cmake
kfusion/: CMakeLists.txt
kfusion/include/io/: capture.hpp
kfusion/include/kfusion/: kinfu.hpp  optimisation.hpp  types.hpp  warp_field.hpp  warp_field_optimiser.hpp
kfusion/include/kfusion/cuda/: device_array.hpp  imgproc.hpp  tsdf_volume.hpp
kfusion/include/opt/: CombinedSolver.h  OpenMesh.h  mLibInclude.h
kfusion/solvers/: dynamicfusion.t
kfusion/src/: capture.cpp  core.cpp  imgproc.cpp  internal.hpp  kinfu.cpp  mLibSource.cpp  tsdf_volume.cpp  warp_field.cpp  warp_field_optimiser.cpp
kfusion/src/cuda/: imgproc.cu  tsdf_volume.cu  warp_field.cu
kfusion/src/cuda/utils/: quaternion.cu
kfusion/src/utils/: dual_quaternion.hpp  knn_point_cloud.hpp  macro_utils.hpp  quaternion.cpp  quaternion.hpp
tests/: CMakeLists.txt  ceres_test_warp.cpp  ceres_warp_test.cpp  nanoflann_test.cpp  warp_field_test.cpp  warp_test.cpp
tests/opt/: CMakeLists.txt  CUDAWarpingSolver.cpp  WarpingSolver.cu  dynamicfusion.t  opt_test.cpp
tests/opt/include/: CUDATimer.h  CUDAWarpingSolver.h  CeresSolver.h  CombinedSolver.h  WarpingSolverState.h  WarpingSolverUtil.h  main.h
tests/utils/: test_dual_quaternion.cc  test_dual_quaternion.cpp  test_quaternion.cc
utils/: dual_quaternion.cpp  dual_quaternion.hpp  quaternion.cpp  quaternion.hpp
